[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pepe_tools"
version = "0.1.0"
description = "CLI tools for pepe-tools"
readme = "README.md"
authors = [
    { name = "Jose Alonzo", email = pepemxl@gmail.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests"
]

[project.scripts]
pepe-tools = "pepe_tools.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
